// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`General layout renders correctly with vertical menu 1`] = `
.emotion-0 {
  list-style: none;
  margin: 0;
  padding: 0;
  position: relative;
  padding-top: 8px;
  padding-bottom: 8px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  width: 100%;
  box-sizing: border-box;
  text-align: left;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 16px;
  padding-right: 16px;
}

.emotion-1.Mui-focusVisible {
  background-color: rgba(0, 0, 0, 0.12);
}

.emotion-1.Mui-selected {
  background-color: rgba(25, 118, 210, 0.08);
}

.emotion-1.Mui-selected.Mui-focusVisible {
  background-color: rgba(25, 118, 210, 0.2);
}

.emotion-1.Mui-disabled {
  opacity: 0.38;
}

<div>
  <ul
    class="MuiList-root MuiList-padding undefined makeStyles-vertical-1 emotion-0"
  >
    <li
      class="MuiListItem-root MuiListItem-gutters MuiListItem-padding makeStyles-item-3 emotion-1"
    >
      <p
        class="makeStyles-link-7"
      >
        <a
          class="makeStyles-link-7 makeStyles-verticalMenu-9"
        >
          About
        </a>
      </p>
    </li>
    <li
      class="MuiListItem-root MuiListItem-gutters MuiListItem-padding makeStyles-item-3 emotion-1"
    >
      <p
        class="makeStyles-link-7"
      >
        <a
          class="makeStyles-link-7 makeStyles-verticalMenu-9"
        >
          Help & Support
        </a>
      </p>
    </li>
    <li
      class="MuiListItem-root MuiListItem-gutters MuiListItem-padding makeStyles-item-3 emotion-1"
    >
      <p
        class="makeStyles-link-7"
      >
        <a
          class="makeStyles-link-7 makeStyles-verticalMenu-9"
        >
          Legal & Policy
        </a>
      </p>
    </li>
    <li
      class="MuiListItem-root MuiListItem-gutters MuiListItem-padding makeStyles-item-3 emotion-1"
    >
      <p
        class="makeStyles-link-7"
      >
        <a
          class="makeStyles-link-7 makeStyles-verticalMenu-9"
        >
          Wallet
        </a>
      </p>
    </li>
  </ul>
</div>
`;

exports[`General layout renders correctly without vertical menu 1`] = `
.emotion-0 {
  list-style: none;
  margin: 0;
  padding: 0;
  position: relative;
  padding-top: 8px;
  padding-bottom: 8px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  width: 100%;
  box-sizing: border-box;
  text-align: left;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 16px;
  padding-right: 16px;
}

.emotion-1.Mui-focusVisible {
  background-color: rgba(0, 0, 0, 0.12);
}

.emotion-1.Mui-selected {
  background-color: rgba(25, 118, 210, 0.08);
}

.emotion-1.Mui-selected.Mui-focusVisible {
  background-color: rgba(25, 118, 210, 0.2);
}

.emotion-1.Mui-disabled {
  opacity: 0.38;
}

<div>
  <ul
    class="MuiList-root MuiList-padding undefined makeStyles-horizontal-13 emotion-0"
  >
    <li
      class="MuiListItem-root MuiListItem-gutters MuiListItem-padding makeStyles-item-14 emotion-1"
    >
      <p
        class="makeStyles-link-18"
      >
        <a
          class="makeStyles-link-18"
        >
          About
        </a>
      </p>
    </li>
    <li
      class="MuiListItem-root MuiListItem-gutters MuiListItem-padding makeStyles-item-14 emotion-1"
    >
      <p
        class="makeStyles-link-18"
      >
        <a
          class="makeStyles-link-18"
        >
          Help & Support
        </a>
      </p>
    </li>
    <li
      class="MuiListItem-root MuiListItem-gutters MuiListItem-padding makeStyles-item-14 emotion-1"
    >
      <p
        class="makeStyles-link-18"
      >
        <a
          class="makeStyles-link-18"
        >
          Legal & Policy
        </a>
      </p>
    </li>
    <li
      class="MuiListItem-root MuiListItem-gutters MuiListItem-padding makeStyles-item-14 emotion-1"
    >
      <p
        class="makeStyles-link-18"
      >
        <a
          class="makeStyles-link-18"
        >
          Wallet
        </a>
      </p>
    </li>
  </ul>
</div>
`;
